--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register</title>
-</head>
-<body>
-    <h1>register</h1>
-    <form id="reg" action="/register/" method="POST">
-        {% csrf_token %}
-        Username: <input type="text" name="username"><br>
-        Password: <input type="password" name="password"><br>
-        Confirm password: <input type="password" name="password_confirmation">
-        <input type="submit" />
-    </form>
-</body>
+	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+		<title>register</title>
+		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+		
+		<style type="text/css">
+		#teade{
+			text-align: center;
+		} 
+		
+		body {
+		  padding-top: 40px;
+		  padding-bottom: 40px;
+		  background-color: #eee;
+		}
+
+		.form-signin {
+		  max-width: 330px;
+		  padding: 15px;
+		  margin: 0 auto;
+		}
+		.form-signin .form-signin-heading,
+		.form-signin .checkbox {
+		  margin-bottom: 10px;
+		}
+		.form-signin .checkbox {
+		  font-weight: normal;
+		}
+		.form-signin .form-control {
+		  position: relative;
+		  height: auto;
+		  -webkit-box-sizing: border-box;
+				  box-sizing: border-box;
+		  padding: 10px;
+		  font-size: 16px;
+		}
+		.form-signin .form-control:focus {
+		  z-index: 2;
+		}
+		.form-signin input[type="email"] {
+		  margin-bottom: -1px;
+		  border-bottom-right-radius: 0;
+		  border-bottom-left-radius: 0;
+		}
+		.form-signin input[type="password"] {
+		  margin-bottom: 10px;
+		  border-top-left-radius: 0;
+		  border-top-right-radius: 0;
+		}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<form id="reg" action="/register/" method="POST">
+				{% csrf_token %}
+				<h2 class="form-signin-heading"><strong>k-space register</strong></h2>
+				<label for="user" class="sr-only">user</label>
+				<input type="text" name="user" id="user" class="form-control" placeholder="user" required autofocus>
+				<label for="pw" class="sr-only">password</label>
+				<input type="password" name="pw" id="pw" class="form-control" placeholder="password" required>
+				<label for="password_confirmation" class="sr-only">confirm password</label>
+				<input type="password" name="password_confirmation" id="password_confirmation" class="form-control" placeholder="confirm password" required>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">register</button>
+			</form>
+		</div>
+	</body>
 </html>
