register bootstrapify fix

--- a/templates/register.html
+++ b/templates/register.html
@@ -64,7 +64,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<form id="reg" action="/register/" method="POST">
+			<form class="form-signin" id="reg" action="/register/" method="POST">
 				{% csrf_token %}
 				<h2 class="form-signin-heading"><strong>k-space register</strong></h2>
 				<label for="user" class="sr-only">user</label>
