--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
   <title>K-space</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="./materialize.min.css">
-  <link rel="stylesheet" href="./app.css">
+  <link rel="stylesheet" href="static/css/materialize.min.css">
+  <link rel="stylesheet" href="static/css/app.css">
 </head>
 
 <body>
@@ -304,7 +304,7 @@
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="./app.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 
 </html>
