--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-          <a href="#" class="btn-large blue">to ideas</a>
+          <a class="btn-large blue" href="/dashboard.html">to ideas</a>
 
           <!-- <div class="card">
             <div class="card-image">
@@ -123,130 +123,122 @@
           </div>
         </div>
       </div>
-      <!-- SVG START -->
-
       <div class="container white-text">
         <div class="row">
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
-          <div class="col s1">yo</div>
+          <div class="col s1">Office 21m2</div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">Lockers</div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">Office 15m<sup>2</sup></div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">Moar lockers</div>
+          <div class="col s1">&nbsp;</div>
+          <div class="col s1">Office 20m2</div>
+          <div class="col s1">&nbsp;</div>
         </div>
       </div>
 
       <div class="container">
-
+        <!-- SVG START -->
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        	 viewBox="0 0 777.9 239.1" style="enable-background:new 0 0 777.9 239.1;" xml:space="preserve">
+	         viewBox="0 0 802.7 239.1" style="enable-background:new 0 0 802.7 239.1;" xml:space="preserve">
         <style type="text/css">
-        	.st0{fill:#26719B;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
-        	.st1{fill:#3498DB;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
-        	.st2{fill:#ECF0F1;stroke:#ECF0F1;stroke-miterlimit:10;}
-        	.st3{fill:#ECF0F1;stroke:#ECF0F1;stroke-width:0.5;stroke-miterlimit:10;}
+	        .st0{fill:#26719B;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
+	        .st1{fill:#3498DB;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
+	        .st2{fill:#ECF0F1;stroke:#ECF0F1;stroke-miterlimit:10;}
+	        .st3{fill:#ECF0F1;stroke:#ECF0F1;stroke-width:0.5;stroke-miterlimit:10;}
+	        .st4{fill:none;stroke:#ECF0F1;stroke-miterlimit:10;}
         </style>
         <g id="bg">
         </g>
         <g id="Layer_1">
-        	<g id="XMLID_20_">
-        		<rect id="XMLID_14_" x="71.8" y="70.6" class="st0" width="265.8" height="29.8"/>
-        		<rect id="XMLID_16_" x="404.1" y="70.6" class="st0" width="265.8" height="29.8"/>
-        	</g>
-        	<g id="XMLID_17_">
-        		<rect id="XMLID_1_" x="4.6" y="100.9" class="st1" width="333" height="40.2"/>
-        		<rect id="XMLID_4_" x="71.8" y="141.2" class="st1" width="66.4" height="66.4"/>
-        		<rect id="XMLID_5_" x="4.6" y="176.4" class="st1" width="67.2" height="31.2"/>
-        		<rect id="XMLID_6_" x="138.3" y="141.2" class="st1" width="66.4" height="66.4"/>
-        		<rect id="XMLID_7_" x="337.6" y="141.2" class="st1" width="66.4" height="66.4"/>
-        		<polygon id="XMLID_3_" class="st1" points="38.2,100.4 4.6,100.4 4.6,46.3 19,31.5 38.2,31.5 		"/>
-        		<rect id="XMLID_2_" x="403.5" y="100.4" class="st1" width="265.8" height="40.2"/>
-        		<rect id="XMLID_13_" x="536.4" y="140.6" class="st1" width="66.4" height="66.4"/>
-        		<rect id="XMLID_11_" x="602.9" y="140.6" class="st1" width="66.4" height="66.4"/>
-        		<polygon id="XMLID_8_" class="st1" points="702.9,100.4 669.3,100.4 669.3,46.3 683.7,31.5 702.9,31.5 		"/>
-        		<rect id="XMLID_10_" x="337.6" y="100.9" class="st1" width="66.4" height="40.2"/>
-        		<polygon id="XMLID_12_" class="st1" points="370,100.4 403.5,100.4 403.5,46.3 389.2,31.5 370,31.5 		"/>
-        		<polygon id="XMLID_9_" class="st1" points="773.8,207.1 736.9,207.1 736.9,140.6 669.3,140.6 669.3,100.4 773.8,100.4 		"/>
-        	</g>
+	        <g id="XMLID_20_">
+		        <rect id="XMLID_14_" x="67.2" y="70.6" class="st0" width="265.8" height="29.8"/>
+		        <rect id="XMLID_16_" x="399.4" y="70.6" class="st0" width="265.8" height="29.8"/>
+	        </g>
+	        <g id="XMLID_17_">
+		        <rect id="XMLID_1_" x="0" y="100.9" class="st1" width="333" height="40.2"/>
+		        <rect id="XMLID_4_" x="67.2" y="141.2" class="st1" width="66.4" height="66.4"/>
+		        <rect id="XMLID_5_" x="0" y="176.4" class="st1" width="67.2" height="31.2"/>
+		        <rect id="XMLID_6_" x="133.6" y="141.2" class="st1" width="66.4" height="66.4"/>
+		        <rect id="XMLID_7_" x="333" y="141.2" class="st1" width="66.4" height="66.4"/>
+		        <polygon id="XMLID_3_" class="st1" points="33.6,100.4 0,100.4 0,46.3 14.3,31.5 33.6,31.5 		"/>
+		        <rect id="XMLID_2_" x="398.9" y="100.4" class="st1" width="265.8" height="40.2"/>
+		        <rect id="XMLID_13_" x="531.8" y="140.6" class="st1" width="66.4" height="66.4"/>
+		        <rect id="XMLID_11_" x="598.3" y="140.6" class="st1" width="66.4" height="66.4"/>
+		        <polygon id="XMLID_8_" class="st1" points="698.3,100.4 664.7,100.4 664.7,46.3 679,31.5 698.3,31.5 		"/>
+		        <rect id="XMLID_10_" x="333" y="100.9" class="st1" width="66.4" height="40.2"/>
+		        <polygon id="XMLID_12_" class="st1" points="365.3,100.4 398.9,100.4 398.9,46.3 384.6,31.5 365.3,31.5 		"/>
+		        <polygon id="XMLID_9_" class="st1" points="769.2,207.1 732.2,207.1 732.2,140.6 664.7,140.6 664.7,100.4 769.2,100.4 		"/>
+	        </g>
         </g>
         <g id="jooned">
-        	<g id="XMLID_212_">
-        		<line id="XMLID_214_" class="st2" x1="20.9" y1="65.9" x2="20.9" y2="0"/>
-        		<ellipse id="XMLID_213_" class="st3" cx="20.9" cy="65.9" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_209_">
-        		<line id="XMLID_211_" class="st2" x1="170.6" y1="121.1" x2="170.6" y2="-0.2"/>
-        		<ellipse id="XMLID_210_" class="st3" cx="170.6" cy="121.1" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_206_">
-        		<line id="XMLID_208_" class="st2" x1="536.4" y1="120.6" x2="536.4" y2="-0.7"/>
-        		<ellipse id="XMLID_207_" class="st3" cx="536.4" cy="120.6" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_203_">
-        		<line id="XMLID_205_" class="st2" x1="386.7" y1="65.9" x2="386.7" y2="0"/>
-        		<ellipse id="XMLID_204_" class="st3" cx="386.7" cy="65.9" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_200_">
-        		<line id="XMLID_202_" class="st2" x1="686.1" y1="65.7" x2="686.1" y2="-0.2"/>
-        		<ellipse id="XMLID_201_" class="st3" cx="686.1" cy="65.7" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_197_">
-        		<line id="XMLID_199_" class="st2" x1="37.7" y1="191.4" x2="37.7" y2="239.1"/>
-        		<ellipse id="XMLID_198_" class="st3" cx="37.7" cy="191.4" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_194_">
-        		<line id="XMLID_196_" class="st2" x1="104.5" y1="174.1" x2="104.5" y2="239.1"/>
-        		<ellipse id="XMLID_195_" class="st3" cx="104.5" cy="173.8" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_191_">
-        		<line id="XMLID_193_" class="st2" x1="171" y1="173.8" x2="171" y2="239.1"/>
-        		<ellipse id="XMLID_192_" class="st3" cx="171" cy="173.8" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_188_">
-        		<line id="XMLID_190_" class="st2" x1="370.3" y1="173.8" x2="370.3" y2="239.2"/>
-        		<ellipse id="XMLID_189_" class="st3" cx="370.3" cy="173.8" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_185_">
-        		<line id="XMLID_187_" class="st2" x1="569.7" y1="173.8" x2="569.7" y2="239.1"/>
-        		<ellipse id="XMLID_186_" class="st3" cx="569.7" cy="173.8" rx="4" ry="3.9"/>
-        	</g>
-        	<g id="XMLID_182_">
-        		<line id="XMLID_184_" class="st2" x1="636.1" y1="173.8" x2="636.1" y2="239.1"/>
-        		<ellipse id="XMLID_183_" class="st3" cx="636.1" cy="173.8" rx="4" ry="3.9"/>
-        	</g>
+	        <g id="XMLID_212_">
+		        <line id="XMLID_214_" class="st2" x1="16.3" y1="65.9" x2="16.3" y2="0"/>
+		        <ellipse id="XMLID_213_" class="st3" cx="16.3" cy="65.9" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_209_">
+		        <line id="XMLID_211_" class="st2" x1="166" y1="121.1" x2="166" y2="-0.2"/>
+		        <ellipse id="XMLID_210_" class="st3" cx="166" cy="121.1" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_206_">
+		        <line id="XMLID_208_" class="st2" x1="565" y1="120.6" x2="565" y2="-0.7"/>
+		        <ellipse id="XMLID_207_" class="st3" cx="565" cy="120.6" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_203_">
+		        <polyline id="XMLID_205_" class="st4" points="382.1,66 348.6,66 348.6,0 		"/>
+		        <ellipse id="XMLID_204_" class="st3" cx="382.1" cy="66" rx="3.9" ry="4"/>
+	        </g>
+	        <g id="XMLID_200_">
+		        <line id="XMLID_202_" class="st2" x1="681.5" y1="65.7" x2="681.5" y2="-0.2"/>
+		        <ellipse id="XMLID_201_" class="st3" cx="681.5" cy="65.7" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_197_">
+		        <line id="XMLID_199_" class="st2" x1="33.1" y1="191.4" x2="33.1" y2="239.1"/>
+		        <ellipse id="XMLID_198_" class="st3" cx="33.1" cy="191.4" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_194_">
+		        <line id="XMLID_196_" class="st2" x1="99.9" y1="174.1" x2="99.9" y2="239.1"/>
+		        <ellipse id="XMLID_195_" class="st3" cx="99.9" cy="173.8" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_191_">
+		        <polyline id="XMLID_193_" class="st4" points="166.8,174.4 230.9,174.4 230.9,239.1 		"/>
+		        <ellipse id="XMLID_192_" class="st3" cx="166.8" cy="174.4" rx="3.9" ry="4"/>
+	        </g>
+	        <g id="XMLID_188_">
+		        <line id="XMLID_190_" class="st2" x1="365.7" y1="173.8" x2="365.7" y2="239.2"/>
+		        <ellipse id="XMLID_189_" class="st3" cx="365.7" cy="173.8" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_185_">
+		        <line id="XMLID_187_" class="st2" x1="565" y1="173.8" x2="565" y2="239.1"/>
+		        <ellipse id="XMLID_186_" class="st3" cx="565" cy="173.8" rx="4" ry="3.9"/>
+	        </g>
+	        <g id="XMLID_182_">
+		        <line id="XMLID_184_" class="st2" x1="631.5" y1="173.8" x2="631.5" y2="239.1"/>
+		        <ellipse id="XMLID_183_" class="st3" cx="631.5" cy="173.8" rx="4" ry="3.9"/>
+	        </g>
         </g>
         </svg>
-
+        <!-- SVG END -->
     </div>
 
     <div class="container white-text">
       <div class="row">
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
-        <div class="col s1">yo</div>
+        <div class="col s1">Servers</div>
+        <div class="col s2">3D printers, lasercutter, soldering</div>
+        <div class="col s2">CNC machine, saw, latche, mill</div>
+        <div class="col s2">Kitchen, toilet, sauna</div>
+
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Meeting room</div>
+        <div class="col s1">Lounge</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">&nbsp;</div>
       </div>
     </div>
   </div>
-
-
-
-      <!-- SVG END -->
-
     <div>
 
       <div class="row section">
@@ -276,7 +268,11 @@
 
               <h5 class="white-text">Sponsors</h5>
               <p class="grey-text text-lighten-4">
-                We have more than 10 companies supporting us financially and by equipment
+                More than 10 paying members
+                </br>
+
+                More than 3 companies supporting
+
                 </br>
                 <a href="#">I want to become a sponsor</a>
               </p>
