New index, added dashboard, font

--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -7,8 +7,8 @@
   <title>K-space</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/materialize.min.css">
-  <link rel="stylesheet" href="/static/css/app.css">
+  <link rel="stylesheet" href="static/css/materialize.min.css">
+  <link rel="stylesheet" href="static/css/app.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
     <div class="row container challenges">
 
-      <div class="col s12 m6">
+      <div class="col s12">
         <div class="card small">
 
           <div class="card-content">
@@ -40,26 +40,7 @@
             </div>
             </br>
             <div class="center-align">
-              <a href="./challenge.html" class="btn-large">I can do it</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m6">
-        <div class="card small">
-
-          <div class="card-content">
-            <div class="card-title">Mälupulgalt andmete taastamine</div>
-            <p>K-spaces käidi vargil, maha jäi mälupulk. Kas sa saad selle põhjal kindlaks teha kellega oli tegu?</p>
-            </br>
-            <div>
-              <div class="chip">Electronics</div>
-              <div class="chip">Security</div>
-            </div>
-            </br>
-            <div class="center-align">
-              <a href="./challenge.html" class="btn-large">I can do it</a>
+              <a href="#" class="btn-large">I can do it</a>
             </div>
           </div>
         </div>
@@ -109,7 +90,7 @@
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="/static/js/app.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 
 </html>
