--- a/templates/index.html
+++ b/templates/index.html
@@ -14,18 +14,27 @@
 <body>
   <div id="container" class="grey lighten-4">
 
-    <div class="header section center-align">
-      <h1 class="section z-depth-1 white-text">k-space.ee</h1>
-    </div>
+    <div class="headerblock section">
 
-    <br/><br/><br/>
+      <div class="fadeimage" style="opacity:1;background-image:url('http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg')"></div>
+      <!-- <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1092117?width=2600&height=2600&c=d21f5a223e7ae8c692c537e6a35ae37f&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div>
+      <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055905?width=2600&height=2600&c=a635e088958188e4490b17a91602366a&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div> -->
 
-    <!-- landing page custom -->
+      <div class="header center-align z-depth-1 section">
+        <h1 class="">k-space.ee</h1>
+        <div class="slogan">
+          <h5 class="center-align">Community-driven space for bringing your tech ideas to life</h5>
+        </div>
+      </div>
 
-    <div class="row container">
+      <br/><br/><br/>
 
-      <div class="section slogan">
-        <h2 class="center-align" style="font-weight:bold">Do actual stuff!</br></h2>
+      <!-- landing page custom -->
+
+      <div class="row container">
+
+
+
       </div>
 
     </div>
@@ -39,7 +48,7 @@
 
           <h5 class="row">Discover awesome <b class="blue-text">ideas</b></h5>
           <div class="row">
-            <div class="col">
+            <div class="col s12">
 
               <p class="">
                 Find out what we are struggling with
@@ -52,13 +61,7 @@
             </div>
           </div>
 
-          <a class="btn-large blue" href="/dashboard.html">to ideas</a>
-
-          <!-- <div class="card">
-            <div class="card-image">
-              <img class="responsive-img" src="https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055442?width=2600&height=2600&c=bff9f89b4125dc8e3a0b27a8b2a96974&requesttoken=UxgCdwYvOglsFHEzLxo4KkQdLH4UDlgyF2xfAFsHY20%3D%3A0K636DNp8vHvjWqS%2Bzj9WywtPGfLln07OnGOVueXLOI%3D&token=j0HUdRNEaZ37wGE"/>
-            </div>
-          </div> -->
+          <a href="#" class="btn-large blue hide-on-med-and-up">to ideas</a>
 
         </div>
 
@@ -71,18 +74,13 @@
           <div class="row">
             <div class="col s12">
               <p class="">
-                Assemble a team
-                <br/>
-                Try to solve the problem
+                Check out our community</br>
+                Explore our wide range of equipment
               </p>
             </div>
           </div>
 
-          <!-- <div class="card">
-            <div class="card-image">
-              <img class="responsive-img" src="https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055266?width=2600&height=2600&c=a3c09377586ace640d57e4e7ac9184b7&requesttoken=UxgCdwYvOglsFHEzLxo4KkQdLH4UDlgyF2xfAFsHY20%3D%3A0K636DNp8vHvjWqS%2Bzj9WywtPGfLln07OnGOVueXLOI%3D&token=j0HUdRNEaZ37wGE"/>
-            </div>
-          </div> -->
+          <a href="#" class="btn-large amber hide-on-med-and-up">equipment</a>
 
         </div>
       </div>
@@ -93,23 +91,28 @@
 
           <h5>Add <b class="green-text">success</b> to your portfolio</h5>
           <div class="row">
-            <div class="col">
+            <div class="col s12">
               <p class="left-align">
                 Your k-space achievements will be visible to all future visitors
               </p>
             </div>
           </div>
-          <a href="#" class="btn-large green">to success</a>
-<!--
-          <div class="card">
-            <div class="card-image">
-              <img class="responsive-img" src="http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg"/>
-            </div>
-          </div> -->
+          <a href="#" class="btn-large green  hide-on-med-and-up">to success</a>
 
         </div>
       </div>
+    </div>
 
+    <div class="row container center-align hide-on-small-only">
+      <div class="col s12 m4">
+        <a class="btn-large blue" href="/dashboard">to ideas</a>
+      </div>
+      <div class="col s12 m4">
+        <a href="#" class="btn-large amber ">to equipment</a>
+      </div>
+      <div class="col s12 m4">
+        <a href="#" class="btn-large green ">to success</a>
+      </div>
     </div>
 
     <div class="section map z-depth-1">
@@ -123,6 +126,8 @@
           </div>
         </div>
       </div>
+      <!-- SVG START -->
+
       <div class="container white-text">
         <div class="row">
           <div class="col s1">Office 21m2</div>
@@ -137,10 +142,12 @@
           <div class="col s1">&nbsp;</div>
           <div class="col s1">Office 20m2</div>
           <div class="col s1">&nbsp;</div>
+
         </div>
       </div>
 
       <div class="container">
+
         <!-- SVG START -->
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	         viewBox="0 0 802.7 239.1" style="enable-background:new 0 0 802.7 239.1;" xml:space="preserve">
@@ -221,7 +228,7 @@
 	        </g>
         </g>
         </svg>
-        <!-- SVG END -->
+
     </div>
 
     <div class="container white-text">
@@ -239,6 +246,11 @@
       </div>
     </div>
   </div>
+
+
+
+      <!-- SVG END -->
+
     <div>
 
       <div class="row section">
@@ -268,11 +280,7 @@
 
               <h5 class="white-text">Sponsors</h5>
               <p class="grey-text text-lighten-4">
-                More than 10 paying members
-                </br>
-
-                More than 3 companies supporting
-
+                We have more than 10 companies supporting us financially and by equipment
                 </br>
                 <a href="#">I want to become a sponsor</a>
               </p>
