--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,9 +1,47 @@
-h1, h2 {
+xxxh1, h2 {
   font-family: 'Orbitron', cursive;
 }
 
-.challenges .btn-large, .header h1 {
+.challenges .btn-large {
   background-color: #3498db;
+}
+
+.headerblock {
+  height: 25em;
+  /*background-image: url("http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg");*/
+  /*background-size: cover;*/
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.headerblock > div {
+  /*position: relative;*/
+}
+
+.headerblock .fadeimage {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  transition: 1s ease;
+  opacity: 0;
+  background-size: cover;
+  background-position: center center;
+}
+
+.fadeimage {
+
+
+}
+
+.header {
+  position: absolute;
+  width: 100%;
+  left:0;
+  bottom:0;
+  background-color: rgba(255,255,255,0.8)
 }
 
 .slogan {
