--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,7 +11,7 @@
   <title>3 Col Portfolio - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!-- Custom styles for this template -->
   <link href="static/css/3-col-portfolio.css" rel="stylesheet">
