--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
   <title>K-space</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="static/css/materialize.min.css">
-  <link rel="stylesheet" href="static/css/app.css">
+  <link rel="stylesheet" href="/static/css/materialize.min.css">
+  <link rel="stylesheet" href="/static/css/app.css">
 </head>
 
 <body>
@@ -61,10 +61,9 @@
             </div>
           </div>
 
-          <a href="#" class="btn-large blue hide-on-med-and-up">to ideas</a>
+          <a href="/challenges" class="btn-large blue hide-on-med-and-up">to ideas</a>
 
         </div>
-
       </div>
 
       <div class="col s12 m4">
@@ -97,7 +96,7 @@
               </p>
             </div>
           </div>
-          <a href="#" class="btn-large green  hide-on-med-and-up">to success</a>
+          <a href="/halloffame" class="btn-large green  hide-on-med-and-up">to success</a>
 
         </div>
       </div>
@@ -105,13 +104,13 @@
 
     <div class="row container center-align hide-on-small-only">
       <div class="col s12 m4">
-        <a class="btn-large blue" href="/dashboard">to ideas</a>
+        <a class="btn-large blue" href="/challenges">to ideas</a>
       </div>
       <div class="col s12 m4">
         <a href="#" class="btn-large amber ">to equipment</a>
       </div>
       <div class="col s12 m4">
-        <a href="#" class="btn-large green ">to success</a>
+        <a href="/halloffame" class="btn-large green ">to success</a>
       </div>
     </div>
 
@@ -289,10 +288,10 @@
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Links</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Location</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
               </ul>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247" width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -308,7 +307,7 @@
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 
 </html>
