--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,11 +26,13 @@
 
     <div class="row container challenges">
 
-      <div class="col s12 m6">
+        {% for challenge in challenges %}
+
+        <div class="col s12 m6">
         <div class="card small">
 
           <div class="card-content">
-            <div class="card-title">Linnar Viigi muruniiduk lahti muukida</div>
+            <div class="card-title">{{ challenge.name }}</div>
             <p>Immo peal, muru on pikk</p>
             </br>
             <div>
@@ -40,31 +42,13 @@
             </div>
             </br>
             <div class="center-align">
-              <a href="./challenge.html" class="btn-large">I can do it</a>
+              <a href="/challenge" class="btn-large">I can do it</a>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="col s12 m6">
-        <div class="card small">
-
-          <div class="card-content">
-            <div class="card-title">Mälupulgalt andmete taastamine</div>
-            <p>K-spaces käidi vargil, maha jäi mälupulk. Kas sa saad selle põhjal kindlaks teha kellega oli tegu?</p>
-            </br>
-            <div>
-              <div class="chip">Electronics</div>
-              <div class="chip">Security</div>
-            </div>
-            </br>
-            <div class="center-align">
-              <a href="./challenge.html" class="btn-large">I can do it</a>
-            </div>
-          </div>
         </div>
-      </div>
 
+        {% endfor %}
     </div>
 
     <!-- dashboard custom -->
