--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,7 +33,7 @@
 
           <div class="card-content">
             <div class="card-title">{{ challenge.name }}</div>
-            <p>Immo peal, muru on pikk</p>
+            <p>{{ challenge.description }}</p>
             </br>
             <div>
               <div class="chip">Electronics</div>
