Links to k-space and improved profile

--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -15,7 +15,7 @@
   <div id="container" class="grey lighten-4">
 
     <div class="header section center-align">
-      <h1 class="section darken-2 z-depth-1 white-text">k-space.ee</h1>
+      <h1 class="section darken-2 z-depth-1 white-text"><a href="/">k-space.ee</a></h1>
     </div>
 
     <br/><br/><br/>
