--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
   <div id="container" class="grey lighten-4">
 
     <div class="header section center-align">
-      <h1 class="section darken-2 z-depth-1 white-text">k-space.ee</h1>
+        <h1 class="section darken-2 z-depth-1 white-text"><a href="/">k-space.ee</a></h1>
     </div>
 
     <br/><br/><br/>
@@ -42,7 +42,7 @@
             </div>
             </br>
             <div class="center-align">
-              <a href="/challenge" class="btn-large">I can do it</a>
+              <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
             </div>
           </div>
         </div>
