--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/materialize.min.css">
   <link rel="stylesheet" href="/static/css/app.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -23,13 +24,13 @@
     <div class="row container section">
       <div class="col s12 m3" style="height:600px;padding-top: 10px;">
         <div>
-          <div class="card" style="width: 450px;height:570px;">
+          <div class="card" style="width: 450px;height:570px; border-radius: 4px;">
             <div class="image">
               <img style="height: 450px;border-radius: 4px;" src="/media/{{ user.profile.icon }}">
               <br><br>
               <div class="row">
                 <div class="col s12 m1">
-                  <img style="padding-left: 5px;" src="https://images.vexels.com/media/users/3/143424/isolated/preview/2aa6cd7edd894a7cefa4eaf0f5916ee9-lightning-bolt-small-by-vexels.png" width="25" height="25" alt="">
+                    <i class="material-icons" style="font-size: 25px; padding-left: 7px">flash_on</i>
                 </div>
                 <div class="col s12 m10">
                   <div class="progress" style="background-color: #f1f1f1">
@@ -42,7 +43,7 @@
               </div>
               <div class="row">
                 <div class="col s12 m1">
-                  <img style="padding-left: 5px;" src="https://www.chowan.edu/sites/chowan.edu/files/www/info-areas/sidebar-images/it-help-desk-logo.png" width="25" height="25" alt="">
+                    <i class="material-icons" style="font-size: 25px; padding-left: 7px">computer</i>
                 </div>
                 <div class="col s12 m10">
                   <div class="progress" style="background-color: #f1f1f1">
